New header image, minor style & wording tweaks

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title:
 
   <p>My name is Michael Baird, and I'm a developer based in Scotland.</p>
 
-  <p>I've been working for the last year in Dundee for <a href="http://outplay.com">Outplay Entertainment</a> as a Server Engineer &amp; Developer, after graduating with first class honours in Applied Computing from the University of Dundee.</p>
+  <p>I've been working for the last year in Dundee for <a href="http://outplay.com">Outplay Entertainment</a> as a full-stack developer, after graduating with first class honours in Applied Computing from the University of Dundee.</p>
 
   <p>Some of the things I've built can be found over at <a href="https://github.com/mbaird">GitHub</a>. If you'd like, you can also check out my <a href="/static/resume.pdf">CV</a>.</p>
 
