--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ title:
 
   <p>Changing the way people rent short-term retail space with the folks at <a href="http://appearhere.co.uk">Appear Here</a>.</p>
 
-  <p>Some of the things I've built can be found over at <a href="https://github.com/mbaird">GitHub</a>. If you'd like, you can also check out my <a href="/static/resume.pdf">CV</a>.</p>
-
+  <p>Some of the things I've built can be found over at <a
+    href="https://github.com/mbaird">GitHub</a>.
 </section>
 
 <section>
@@ -44,5 +44,4 @@ title:
     {% endfor %}
   </ol>
 </section>
-
 
